// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_extends file is missing: result 1`] = `
Object {
  "config": Object {
    "setting1": "value from repo config file",
  },
  "files": Array [
    Object {
      "config": Object {
        "setting1": "value from repo config file",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
    },
    Object {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "base",
    },
  ],
}
`;

exports[`config file is a submodule: log 1`] = `
Object {
  "debug": [MockFunction],
  "error": [MockFunction],
  "info": [MockFunction],
  "warn": [MockFunction] {
    "calls": Array [
      Array [
        "[@probot/octokit-plugin-config] https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml exists, but is either a directory or a submodule. Ignoring.",
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
}
`;

exports[`config file is a submodule: result 1`] = `
Object {
  "config": Object {},
  "files": Array [
    Object {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
    },
    Object {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": ".github",
    },
  ],
}
`;

exports[`config file is empty: result 1`] = `
Object {
  "config": Object {},
  "files": Array [
    Object {
      "config": Object {},
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
    },
  ],
}
`;

exports[`octokit.config.get _extends: base with defaults and custom merge: result 1`] = `
Object {
  "config": Object {
    "otherSetting1": "value from repo config file",
    "otherSetting2": "value from base config file",
    "otherSetting3": "default value",
    "settings": Object {
      "one": "value from repo config file",
      "three": "default value",
      "two": "value from base config file",
    },
  },
  "files": Array [
    Object {
      "config": Object {
        "otherSetting1": "value from repo config file",
        "settings": Object {
          "one": "value from repo config file",
        },
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
    },
    Object {
      "config": Object {
        "otherSetting1": "value from base config file",
        "otherSetting2": "value from base config file",
        "settings": Object {
          "one": "value from base config file",
          "two": "value from base config file",
        },
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "base",
    },
  ],
}
`;

exports[`octokit.config.get _extends: base: result 1`] = `
Object {
  "config": Object {
    "setting1": "value from repo config file",
    "setting2": "value from base config file",
  },
  "files": Array [
    Object {
      "config": Object {
        "setting1": "value from repo config file",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
    },
    Object {
      "config": Object {
        "setting1": "value from base config file",
        "setting2": "value from base config file",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "base",
    },
  ],
}
`;

exports[`octokit.config.get README simple usage example: result 1`] = `
Object {
  "config": Object {
    "comment": "Thank you for creating the issue!",
  },
  "files": Array [
    Object {
      "config": Object {
        "comment": "Thank you for creating the issue!",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
    },
  ],
}
`;

exports[`octokit.config.get config file missing: result 1`] = `
Object {
  "config": Object {
    "comment": "Thank you for creating the issue!",
  },
  "files": Array [
    Object {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
    },
    Object {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": ".github",
    },
  ],
}
`;

exports[`octokit.config.get defaults option when no config present: result 1`] = `
Object {
  "config": Object {
    "comment": "Thank you for creating the issue!",
  },
  "files": Array [
    Object {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
    },
    Object {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": ".github",
    },
  ],
}
`;

exports[`octokit.config.get merges deeply using defaults function: result 1`] = `
Object {
  "config": Object {
    "otherSetting1": "value from config file",
    "otherSetting2": "default value",
    "settings": Object {
      "one": "value from config file",
      "two": "default value",
    },
  },
  "files": Array [
    Object {
      "config": Object {
        "otherSetting1": "value from config file",
        "settings": Object {
          "one": "value from config file",
        },
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
    },
  ],
}
`;

exports[`octokit.config.get merges defaults option from .github repository: result 1`] = `
Object {
  "config": Object {
    "config": "value from octocat/.github:.github/my-app.yml",
    "otherConfig": "default value",
  },
  "files": Array [
    Object {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
    },
    Object {
      "config": Object {
        "config": "value from octocat/.github:.github/my-app.yml",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": ".github",
    },
  ],
}
`;

exports[`octokit.config.get merges defaults option: result 1`] = `
Object {
  "config": Object {
    "config": "value from .github/my-app.yml",
    "otherConfig": "default value",
  },
  "files": Array [
    Object {
      "config": Object {
        "config": "value from .github/my-app.yml",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
    },
  ],
}
`;

exports[`repo is .github: result 1`] = `
Object {
  "config": Object {},
  "files": Array [
    Object {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": ".github",
    },
  ],
}
`;
